get all appointments/all open appointments at a location
